# mlops-zoomcamp-homeworks

./: .gitignore  README.md  pyproject.toml
01-intro/: 01-intro.ipynb
02-experiment-tracking/: 02-experiment-tracking.ipynb
02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
03-orchestration/homework/: .gitignore  metadata.yaml
03-orchestration/homework/data_exporters/: export_artifact_to_mlflow.py  export_lr_model_intercept.py
03-orchestration/homework/data_loaders/: load_dataset_from_file.py
03-orchestration/homework/pipelines/ml_pipeline_homework/: metadata.yaml
03-orchestration/homework/presenters/pipelines/ml_pipeline_homework/dashboard/: block_layout.yaml
03-orchestration/homework/transformers/: clear.py  train.py
03-orchestration/mage/: Dockerfile  docker-compose.yml
05-monitoring/: .env.example  baseline_model_nyc_taxi_data.ipynb  database.py  docker-compose.yml  generate_dummy_metrics.py  generate_evidently_metrics.py
05-monitoring/config/: grafana_datasources.yml
05-monitoring/dashboards/: data_drift.json
05-monitoring/data/: .gitignore  05_monitoring_reference.parquet.dvc  green_tripdata_2024-03.parquet.dvc
data/green_tripdata/: .gitignore  green_tripdata_2023-01.parquet.dvc  green_tripdata_2023-02.parquet.dvc  green_tripdata_2023-03.parquet.dvc
data/yellow_tripdata/: .gitignore  yellow_tripdata_2023-03.parquet.dvc
