[tool.poetry]
name = "mlops-zoomcamp-homeworks"
version = "0.1.0"
description = ""
authors = ["moon <flbrazhnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
jupyter = "^1.0.0"
pyarrow = "^16.1.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
dvc = "^3.50.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
