[tool.poetry]
name = "mlops-zoomcamp-homeworks"
version = "0.1.0"
description = ""
authors = ["moon <flbrazhnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
pyarrow = "^14.0.1"
mlflow = "^2.13.0"
python-dotenv = "^1.0.1"
boto3 = "^1.34.113"
hyperopt = "^0.2.7"
#mage-ai = "^0.9.71"
psycopg2-binary = "^2.9.9"
evidently = "^0.4.28"


[tool.poetry.group.dev.dependencies]
dvc = "^3.50.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
